--- a/src/main/resources/templates/properties.html
+++ b/src/main/resources/templates/properties.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Naslov</title>
 </head>
 <body>
-<th:textarea style="width:100%; height:100%;">${properties}}</th:textarea>
+<textarea data-th-text="${properties}" rows="50" style="width:60%; height:100%;">Primjer properties texta.</textarea>
 </body>
 </html>
+
+
